css/mobile.css
/* Tablet Optimization */
@media (max-aspect-ratio: 5/3) {
    object[data="img/cowandsquirrel.svg"] {
        bottom: 10%;
    }
    section:first-child, #main > div:first-of-type {
        margin-bottom: -13vh;
    }
    #about-text {
        bottom: 10%;
    }
    img[src="img/front grass.png"] {
        bottom: 10%;
    }
}
@media (max-width: 1000px) {
    img[src="img/logowhitewebsite.png"] {
        margin-left: -100px;
        margin-top: -100px;
    }
}
/* Portrait mode */
@media (min-width: 750px) and (max-aspect-ratio: 1/1) {
    img[src="img/front grass.png"] {
        bottom: 25%;
    }
    img[src="img/backhills.png"], img[src="img/mountains.png"] {
        width: 140vh;
    }
    img[src="img/backhills.png"] {
        left: 50%;
        margin-left: -70vh;
    }
    section:first-child, #main > div:first-of-type {
        margin-bottom: -32.5vh;
    }
    img[src="img/logowhitewebsite.png"] {
        width:30vw;
        margin-left: -15vw;
        margin-top: -15vw;
    }
    #about-text {
        bottom: 25.5%;
        margin-bottom: 0;
    }
    #about-text h1 {
        margin-top: 0;
    }
    object[data="img/soil.svg"] {
        margin-top: -5px;
    }
}
@media (max-width: 1450px) {
    #main {
        font-size: 20px;
    }
}
@media (max-width: 1250px) {
    #main {
        font-size: 16px;
    }
}
@media (max-width: 992px) {
    #about-text > .row {
        flex-wrap: wrap;
    }
    #about-text p {
        padding-right: 2em;
    }
    #about-text h1 {
        margin-top: 0;
    }
}

/* Mobile site */
@media (max-width: 750px) {
    #schedule {
        margin-top: -12vw;
    }
    #nav, #brownNav, #rearNav {
        display: none;
    }
    #lantern, #lantern-img {
        display: none;
    }
    #about-text h1 {
        margin-top: 20px;
    }
    #apply-button {
        display: block;
    }
    section:first-child {
        margin-top: 0px;
        height: 500px;
        margin-bottom: 0;
    }
    #mlh-trust-badge {
      margin-top: 0;
      position: absolute;
      content: url("https://s3.amazonaws.com/logged-assets/trust-badge/2018/blue.svg")
    }
    img[src="img/backhills.png"] {
        top: 30%;
        height: 70%;
        left: -20%;
    }
    img[src="img/mountains.png"] {
        top: 10%;
        height: 70%;
        left: -30%;
    }
    img[src="img/sky.png"] {
        margin-top: -18vw;
        height: 100%;
    }
    #about-text {
        position: static;
        background: linear-gradient(to bottom, #8CB936 0%,#4D912B 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
        padding-bottom: 30px;
        height: auto;
        padding-top: 20px;
        margin-bottom: 0;
    }
    #about-text p {
        padding-right: 15px;
        padding-left: 15px;
    }
    #main > div:first-of-type {
        position: static;
        height: auto;
        margin-top: 0;
        margin-bottom: 0;
    }
    img[src="img/logowhitewebsite.png"] {
        top: 45%;
    }
    #FAQ h2 {
      margin-left: 0;
      text-align: center;
    }
    #FAQ p {
      margin-right: 30px;
      margin-left: 30px;
    }
    img[src="img/schedule.png"] {
        margin-left: -45%;
        width: 100%;
    }
}

/* Centering on iPhone 5
@media (max-width: 330px){
  img[src="img/backhills.png"] {
      margin-left: -215px;
  }
} */

